# debuai

./: .env  .gitignore  Contributing.md  LICENSE  PROJECT_PLAN.md  README.md  SETUP_RUN.md  pyproject.toml
.github/workflows/: debugai.yml
debuai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
debugai/: ai_analyzer.py  cli.py  issue_search.py
debugai/parser/: python.py
debugai/providers/: base.py  nvidia.py
tests/: pyproject.toml  test_issue_search.py  test_json_output.py
