[project]
name = "debuai"
version = "0.1.1"
description = "AI-powered CLI tool that turns stack traces into root cause analysis instantly"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Kanhaiya Bhayana", email = "ikanhaiyabhayana@outlook.com" }
]
requires-python = ">=3.9"
dependencies = [
    "typer",
    "rich",
    "openai",
    "anthropic"
]
keywords = ["debugging", "cli", "ai", "stack-trace", "devtools", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/kanhaiya-bhayana/debuai"
Repository = "https://github.com/kanhaiya-bhayana/debuai"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
debuai = "debugai.cli:app"